--- a/socialmediaStyle.css
+++ b/socialmediaStyle.css
@@ -61,16 +61,19 @@ nav a:hover::before{
     width: 100%;
     transition: all ease-in-out 250ms;
 }
+
+
+
 /* Dropdown Button */
 .dropbtn {
     background-color: rgba(224,255,251,255);
     color: rgb(100,116,116);
-    padding: 16px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 14px;
     border: none;
     cursor: pointer;
+    padding-top: 25px;
   }
   
   /* Dropdown button on hover & focus */
@@ -87,9 +90,11 @@ nav a:hover::before{
     width: 0%;
 }
 .dropbtn:hover::before{
-    width: 68%;
+    margin-left: -6px; /*weird value to center the over button highlight*/
+    width: 100%;
     transition: all ease-in-out 250ms;
 }
+
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
